force-app/main/default/objects/Program_Goal__c/Program_Goal__c.object-meta.xml
<CustomObject>
    <description>Entry object for quarterly goals</description>
    <label>Program Goaling</label>
    <nameField>
        <label>Program Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>