force-app/main/default/objects/Program_Goal__c/fields/APAC_JFF_Commentary__c.field-meta.xml
<CustomField>
    <fullName>APAC_JFF_Commentary__c</fullName>
    <label>APAC JFF Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>