force-app/main/default/objects/Program_Goal__c/fields/Blade_Runner_Commit__c.field-meta.xml
<CustomField>
    <fullName>Blade_Runner_Commit__c</fullName>
    <label>Blade Runner Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>