force-app/main/default/objects/Program_Goal__c/fields/DGX_Commit__c.field-meta.xml
<CustomField>
    <fullName>DGX_Commit__c</fullName>
    <label>DGX Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>