force-app/main/default/objects/Program_Goal__c/fields/Drive_Constellation_Commit__c.field-meta.xml
<CustomField>
    <fullName>Drive_Constellation_Commit__c</fullName>
    <label>Drive Constellation Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>