force-app/main/default/objects/Program_Goal__c/fields/EMEA_JFF_Commentary__c.field-meta.xml
<CustomField>
    <fullName>EMEA_JFF_Commentary__c</fullName>
    <label>EMEA JFF Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>