force-app/main/default/objects/Program_Goal__c/fields/Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Quarter__c</fullName>
    <label>Fiscal Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2018Q1</fullName>
            </value>
            <value>
                <fullName>2018Q2</fullName>
            </value>
            <value>
                <fullName>2018Q3</fullName>
            </value>
            <value>
                <fullName>2018Q4</fullName>
            </value>
            <value>
                <fullName>2019Q1</fullName>
            </value>
            <value>
                <fullName>2019Q2</fullName>
            </value>
            <value>
                <fullName>2019Q3</fullName>
            </value>
            <value>
                <fullName>2019Q4</fullName>
            </value>
            <value>
                <fullName>2020Q1</fullName>
            </value>
            <value>
                <fullName>2020Q2</fullName>
            </value>
            <value>
                <fullName>2020Q3</fullName>
            </value>
            <value>
                <fullName>2020Q4</fullName>
            </value>
            <value>
                <fullName>2021Q1</fullName>
            </value>
            <value>
                <fullName>2021Q2</fullName>
            </value>
            <value>
                <fullName>2021Q3</fullName>
            </value>
            <value>
                <fullName>2021Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>