force-app/main/default/objects/Program_Goal__c/fields/GRID_SW_Commit__c.field-meta.xml
<CustomField>
    <fullName>GRID_SW_Commit__c</fullName>
    <label>GRID SW Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>