force-app/main/default/objects/Program_Goal__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supercomputing</fullName>
            </value>
            <value>
                <fullName>Higher Ed/Research</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
            <value>
                <fullName>Retail and CPG</fullName>
            </value>
            <value>
                <fullName>Public Sector-US</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Architecture, Eng and Construction</fullName>
            </value>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas/Energy</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Media/Entertainment</fullName>
            </value>
            <value>
                <fullName>AI City-China</fullName>
            </value>
            <value>
                <fullName>Financial Services Industry (FSI)</fullName>
            </value>
            <value>
                <fullName>CRISP</fullName>
            </value>
            <value>
                <fullName>IT Services</fullName>
            </value>
            <value>
                <fullName>Data Analytics</fullName>
            </value>
            <value>
                <fullName>Strategic Hyperscale</fullName>
            </value>
            <value>
                <fullName>Public Sector-ROW</fullName>
            </value>
            <value>
                <fullName>AI City-ROW</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Manufacturing - Design</fullName>
                <isActive>false</isActive>
                <label>Manufacturing - Design</label>
            </value>
            <value>
                <fullName>Manufacturing - Industrial</fullName>
                <isActive>false</isActive>
                <label>Manufacturing - Industrial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>