force-app/main/default/objects/Program_Goal__c/fields/JAPAN_JFF_Commentary__c.field-meta.xml
<CustomField>
    <fullName>JAPAN_JFF_Commentary__c</fullName>
    <label>JAPAN JFF Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>