force-app/main/default/objects/Program_Goal__c/fields/NALA_JFF_Commentary__c.field-meta.xml
<CustomField>
    <fullName>NALA_JFF_Commentary__c</fullName>
    <label>NALA JFF Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>