force-app/main/default/objects/Program_Goal__c/fields/NRE_Commit__c.field-meta.xml
<CustomField>
    <fullName>NRE_Commit__c</fullName>
    <label>NRE Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>