force-app/main/default/objects/Program_Goal__c/fields/Pipeline_Base__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Base__c</fullName>
    <label>Pipeline Base ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>