force-app/main/default/objects/Program_Goal__c/fields/RTX_Titan_Commit__c.field-meta.xml
<CustomField>
    <fullName>RTX_Titan_Commit__c</fullName>
    <label>RTX &amp; Titan Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>