force-app/main/default/objects/Program_Goal__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DGX</fullName>
            </value>
            <value>
                <fullName>GRID</fullName>
            </value>
            <value>
                <fullName>HPC</fullName>
            </value>
            <value>
                <fullName>RTX</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Tesla Unverified</fullName>
            </value>
            <value>
                <fullName>Datacenter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>