force-app/main/default/objects/Program_Goal__c/fields/Tesla_MCO_Commit__c.field-meta.xml
<CustomField>
    <fullName>Tesla_MCO_Commit__c</fullName>
    <label>Tesla MCO Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>