force-app/main/default/objects/Program_Goal__c/fields/Tesla_SMO_Commit__c.field-meta.xml
<CustomField>
    <fullName>Tesla_SMO_Commit__c</fullName>
    <label>Tesla SMO Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>