force-app/main/default/objects/Program_Goal__c/fields/Titan_V_Commit__c.field-meta.xml
<CustomField>
    <fullName>Titan_V_Commit__c</fullName>
    <label>Titan V Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>