force-app/main/default/objects/Program_Goal__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>JFF Revenue</fullName>
            </value>
            <value>
                <fullName>Datacenter Model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>