force-app/main/default/objects/Program_Goal__c/recordTypes/Focus_Deal_Tracker.recordType-meta.xml
<RecordType>
    <fullName>Focus_Deal_Tracker</fullName>
    <active>true</active>
    <label>Focus Deal Tracker Targets</label>
</RecordType>