force-app/main/default/objects/Program_Goal__c/recordTypes/IBD_Sales_Targets.recordType-meta.xml
<RecordType>
    <fullName>IBD_Sales_Targets</fullName>
    <active>true</active>
    <label>IBD Sales Targets</label>
</RecordType>