force-app/main/default/objects/Program_Goal__c/recordTypes/Individual_Target.recordType-meta.xml
<RecordType>
    <fullName>Individual_Target</fullName>
    <active>true</active>
    <label>Individual Target</label>
</RecordType>