force-app/main/default/objects/Program_Goal__c/recordTypes/JFF_Commits.recordType-meta.xml
<RecordType>
    <fullName>JFF_Commits</fullName>
    <active>true</active>
    <label>JFF Commits</label>
</RecordType>