force-app/main/default/objects/Program_Goal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Fiscal_Quarter__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Region__c</columns>
    <columns>Segment__c</columns>
    <columns>Target__c</columns>
    <columns>BFMJ_Commit__c</columns>
    <columns>Tesla_MCO_Commit__c</columns>
    <columns>Tesla_SMO_Commit__c</columns>
    <columns>GRID_HW_Commit__c</columns>
    <columns>NRE_Commit__c</columns>
    <columns>DGX_Commit__c</columns>
    <columns>GRID_SW_Commit__c</columns>
    <columns>Backlog__c</columns>
    <columns>GRID_SW_Bookings__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>