force-app/main/default/objects/Program_Goal__c/listViews/All_IBD_Goals.listView-meta.xml
<ListView>
    <fullName>All_IBD_Goals</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Fiscal_Quarter__c</columns>
    <columns>Industry__c</columns>
    <columns>Segment__c</columns>
    <columns>Pipeline_Base__c</columns>
    <columns>Pipeline_Stretch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Program_Goal__c.IBD_Sales_Targets</value>
    </filters>
    <label>All IBD Goals</label>
</ListView>