force-app/main/default/objects/Program_Goal__c/listViews/All_Program_Goals.listView-meta.xml
<ListView>
    <fullName>All_Program_Goals</fullName>
    <columns>Fiscal_Quarter__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>BFMJ_Commit__c</columns>
    <columns>Date_Approved__c</columns>
    <columns>DGX_Commit__c</columns>
    <columns>Drive_Constellation_Commit__c</columns>
    <columns>EMEA_JFF_Commentary__c</columns>
    <columns>GRID_HW_Commit__c</columns>
    <columns>GRID_SW_Commit__c</columns>
    <columns>Pipeline_Base__c</columns>
    <columns>Pipeline_Stretch__c</columns>
    <columns>RTX_Titan_Commit__c</columns>
    <columns>Tesla_MCO_Commit__c</columns>
    <columns>Tesla_SMO_Commit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Program_Goal__c.Focus_Deal_Tracker</value>
    </filters>
    <label>All Program Goals</label>
    <language>en_US</language>
</ListView>