force-app/main/default/objects/Program_Goal__c/listViews/MCO_Current_Quarter_Targets.listView-meta.xml
<ListView>
    <fullName>MCO_Current_Quarter_Targets</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Segment__c</columns>
    <columns>Target__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Program_Goal__c.Focus_Deal_Tracker</value>
    </filters>
    <filters>
        <field>Fiscal_Quarter__c</field>
        <operation>equals</operation>
        <value>2020Q4</value>
    </filters>
    <label>MCO Current Quarter Targets</label>
    <language>en_US</language>
    <sharedTo>
        <role>Administrator</role>
    </sharedTo>
</ListView>